--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <title>Clock</title>
     <link rel="stylesheet" href="styles/main.css">
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+   <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     
   </head>
-  <body>
+  <body id="bgcolor">
     <div class="clock-container">
       <svg class="clock" viewBox="0 0 100 100">
       <circle cx="50" cy="50" r="40"/>
@@ -20,6 +22,6 @@
 
       
       <script src="scripts/main.js"></script>
-      <body onload = changebackground();>
+      <!-- <body onload = changebackground();> -->
     </body>
   </html>
